@@ -190,6 +190,8 @@ alliance = make_user_table()
 player.equipment = make_user_table()
 pet = make_user_table()
 pet.isvalid = false
+fellow = make_user_table()
+fellow.isvalid = false
 st_flag = false
 current_job_file = nil
 disable_table = {false,false,false,false,false,false,false,false,false,false,false,false,false,false,false}
