@@ -1,4 +1,6 @@
 -------------------------------------------------
+Gearswap 0.712 - Added adventuring fellow handling.
+-------------------------------------------------
 Gearswap 0.711 - Refined category exclusions for the outgoing action packet.
 -------------------------------------------------
 Gearswap 0.710 - Added windower.debug statements.
